0.05
  Bug fixes:
  * "use mixin" will now throw an error if the mixed in module cannot be
    loaded. [rt.cpan.org 5366]

0.04  Mon Apr 29 18:45:58 EDT 2002
  * And I forgot to test it. :(

0.03  Mon Apr 29 18:33:45 EDT 2002
  * mixin forgot to require the package being mixed in!

0.02  Wed Apr 17 11:05:08 EDT 2002
  * Removed the caveat about mixins not having any superclasses.
  * Removed the caveat about mixins not working stand-alone.
  * Fixed so a mixin can use it's parent's methods during
    initialization.
  * Made flexible enough to work with Class::DBI, which is pretty
    pathological.

0.01  Tue Apr 16 15:42:01 EDT 2002
  * It works